--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -16,6 +16,15 @@
 
     <!-- External styles (optional) -->
     <link rel="stylesheet" href="https://cdn.plyr.io/3.6.12/plyr.css" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ELNKRDF1HG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ELNKRDF1HG');
+</script>
 </head>
 
 <body class="bg-gray-100 text-gray-900 font-sans transition-all">
